Add st alias to gitconfig

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -30,3 +30,4 @@
 [alias]
     # see https://coderwall.com/p/euwpig/a-better-git-log
     lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    st = status
