--- a/editorconfig/.editorconfig
+++ b/editorconfig/.editorconfig
@@ -37,9 +37,6 @@ max_line_length = 80
 # see https://docs.npmjs.com/misc/coding-style#indentation
 indent_size = 2
 
-[{Makefile,**.mk}]
+[Makefile]
 # use tabs for indentation (Makefiles require tabs)
-indent_style = tab
-
-[{.gitconfig}]
 indent_style = tab
