--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
