--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,8 +6,8 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # split panes
-bind S split-window -h
-bind s split-window -v
+bind S split-window -h -c '#{pane_current_path}'
+bind s split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
