--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,9 @@
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-termite"
 
 # remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+#unbind C-b
+#set -g prefix C-a
+#bind C-a send-prefix
 
 # split panes
 bind S split-window -h -c '#{pane_current_path}'
