Add vimdiff config

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,7 +12,7 @@
     # https://git-scm.com/docs/git-config#git-config-statusshowUntrackedFiles
     showUntrackedFiles = all
 [diff]
-    tool = vimdiff
+	tool = vimdiff
 [color] # see https://nathanhoad.net/how-to-colours-in-git
     ui = auto
 [color "branch"]
@@ -31,3 +31,6 @@
     # see https://coderwall.com/p/euwpig/a-better-git-log
     lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
     st = status
+	d = difftool
+[difftool]
+	prompt = false
