Clean up tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,17 +1,17 @@
 set -g default-terminal "xterm-termite"
+set -g base-index 1
+set -g mouse on
 
-# remap prefix from 'C-b' to 'C-a'
-#unbind C-b
-#set -g prefix C-a
-#bind C-a send-prefix
+setw -g mode-keys vi
+setw -g monitor-activity on
 
-# split panes
+# Split panes
 bind S split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
-# reload config file
+# Reload config file
 bind r source-file ~/.tmux.conf
 
 # enable mouse mode
