--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,3 +13,9 @@ unbind %
 
 # Reload config file
 bind r source-file ~/.tmux.conf
+
+# Vim-like pane switching
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
