Fix bold font not working

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 include snazzy.conf
 font_family Ubuntu Mono
+bold_font Ubuntu Mono Bold
+bold_italic_font auto
 font_size 13
 cursor_shape block
 cursor_blink_interval -1
