--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,5 @@
-set -g default-terminal "xterm-termite"
+# set -g default-terminal "xterm-termite"
+set -g default-terminal "tmux-256color"
 set -g base-index 1
 set -g mouse on
 
