--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -9,6 +9,9 @@
     # https://git-scm.com/docs/git-config#git-config-corewhitespace
     whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
     askPass = ""
+[pull]
+    # https://stackoverflow.com/a/62653400
+    ff = only
 [push]
     # https://git-scm.com/docs/git-config#git-config-pushdefault
     default = simple
