Update git config

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -39,5 +39,8 @@
     lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
     st = status
     d = difftool
+    g = grep --break --heading --line-number
 [difftool]
     prompt = false
+[grep]
+    lineNumber = true
