Add credential helper to git config

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -44,3 +44,5 @@
     prompt = false
 [grep]
     lineNumber = true
+[credential]
+	helper = /usr/share/doc/git/contrib/credential/libsecret/git-credential-libsecret
