Switch font to Julia Mono

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
 include snazzy.conf
-font_family Ubuntu Mono
-bold_font Ubuntu Mono Bold
+font_family Julia Mono
+bold_font Julia Mono Bold
 bold_italic_font auto
-font_size 13
+font_size 12
 cursor_shape block
 cursor_blink_interval -1
 copy_on_select yes
