Use different cursor shape when in insert mode

--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -1,11 +1,16 @@
-theme = "everforest_dark"
+theme = "mytheme"
 
 [editor]
 auto-pairs = false
 line-number = "relative"
 mouse = false
+rulers = [ 80 ]
 
 [editor.cursor-shape]
-insert = "underline"
+insert = "bar"
 normal = "block"
 select = "block"
+
+[editor.lsp]
+display-messages = true
+display-inlay-hints = true
