Fix delay when using Helix

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,9 @@ set -g default-terminal "tmux-256color"
 set -g base-index 1
 set -g mouse on
 
+# https://github.com/helix-editor/helix/wiki/Troubleshooting#when-using-tmux-or-screen-there-is-a-delay-after-hitting-escape-before-its-registered
+set -sg escape-time 0
+
 setw -g mode-keys vi
 setw -g monitor-activity on
 
